--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="app_name" content="94list-laravel" />
     <title>94list-laravel</title>
-    <script type="module" crossorigin src="/assets/js/index-BgchkrXJ.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/js/.pnpm-Mf6j6NBF.js">
+    <script type="module" crossorigin src="/assets/js/index-ctO0osHI.js"></script>
+    <link rel="modulepreload" crossorigin href="/assets/js/.pnpm-iATkil5N.js">
     <link rel="stylesheet" crossorigin href="/assets/css/.pnpm-Cz8IueYi.css">
     <link rel="stylesheet" crossorigin href="/assets/css/index-qsVAQOGj.css">
   </head>
